--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -200,11 +200,14 @@ section {
 .incident-item{
     border-bottom: 1px solid #dddddd;
     padding-left: 1rem;
+    &:hover {
+      background-color: #f3f5f6;
+      cursor: pointer;
+    }
     .item-header{
         font-size: 20px;
         font-weight: 400;
         padding: 10px 0px;
-        background-color: white;
     }
     .item-title{
         color:#646B72;
@@ -281,4 +284,24 @@ section {
     padding-left: 1rem;
     font-size: 15px;
     font-weight: 400;
+}
+
+::ng-deep .mat-progress-bar-fill {
+  background-color: white;
+}
+
+
+::ng-deep .mat-progress-bar-fill::after {
+  background-color: #1a5a9684;
+}
+
+::ng-deep .mat-progress-bar-buffer {
+  background: white;
+}
+
+::ng-deep .mat-progress-bar {
+  border-radius: 2px;
+  height: 2px !important;
+  margin-left: -16px;
+  width: calc(100% + 16px) !important;
 }
