Add  border to identify

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -183,6 +183,7 @@
         width: 600px;
         display: none;
         overflow-y: auto;
+        border: 1px solid #dddddd;
       }
     }
  }
