--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -21,12 +21,6 @@
                     </p>
                 </article>
                 <article>
-                    <h2 class="orange">New</h2>
-                    <p class="paragraph-format">
-                        A new wildfire that has been posted within the last 24 hours.
-                    </p>
-                </article>
-                <article>
                     <h2 class="red">Out of Control</h2>
                     <p class="paragraph-format">
                         A wildfire that is continuing to spread and is not responding to suppression efforts.
@@ -68,22 +62,21 @@
         <div class="wildfire-checkboxs">
             <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="activeWildfiresInd">Active Wildfires</mat-checkbox>
             <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="wildfiresOfNoteInd">Only Wildfires of Note </mat-checkbox>
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="wildfiresOutInd">Wildfires that are 'Out'</mat-checkbox>
         </div>
         <div *ngIf="collectionData">
             <div class = "incident-item" *ngFor="let incident of collectionData" (click)="openPreview(incident)" (mouseenter)="onPanelMouseEnter(incident)" (mouseleave)="onPanelMouseExit(incident)">
               <mat-progress-bar [id]="incident.incidentName" mode="determinate" [value]="progressValues.get(incident.incidentName)"></mat-progress-bar>
               <div class="item-header" style="color: #1a5a96">{{incident.incidentName}} <mat-icon style="color:#1A5A96; vertical-align: middle;" svgIcon="bookmark"></mat-icon> </div>
-                <div>
-                    <span class="item-title">LAST UPDATED: </span>
+                <div class="item-row">
+                    <span class="item-title">Last Updated: </span>
                     <span class="item-content">{{convertFromTimestamp(incident.newsCreatedTimestamp)}}</span>
                 </div>
-                <div>
-                    <span class="item-title">FIRE CENTRE: </span>
+                <div class="item-row">
+                    <span class="item-title">Fire Centre: </span>
                     <span class="item-content"></span>
                 </div>
-                <div>
-                    <span class="item-title">DISTANCE FROM MY LOCATION: </span>
+                <div class="item-row">
+                    <span class="item-title">Distance from My Location: </span>
                     <span class="item-content">{{calculateDistance(Number(incident.latitude), Number(incident.longitude))}} km</span>
                 </div>
                 <div class="tags">
