--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -16,7 +16,12 @@
   height: 4px !important;
 }
 
+.page {
+  background-color: #f2f2f2;
+}
+
 .page-container {
   max-width: 1185px;
   margin: auto;
+  background-color: white;
 }
