--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -8,11 +8,11 @@
 }
 
 :host ::ng-deep .mat-tab-label {
-  color: #093a6b;
+  color: #003366;
 }
 
 :host ::ng-deep .mat-ink-bar {
-  background-color: #093a6b !important;
+  background-color: #003366 !important;
   height: 4px !important;
 }
 
