--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -8,16 +8,102 @@
       <mat-icon class="button">print</mat-icon>
     </div>
   </div>
-  <div>
+  <div class="content-panel">
     stage of control panel
   </div>
-  <div>
+  <div class="content-panel">
     Evac and restriction panel
   </div>
-  <div>
-    response panel
+  <div class="content-panel">
+    <h1>Response</h1>
+    <div class="content-panel-body">
+      All resource information is estimated and is updated as frequently as possible, but may not accurately depict the resources deployed on an incident. The BC Wildfire Service relies on thousands of people each year to respond to wildfires. This includes fire fighters, air crews, equipment operators and support staff.
+    </div>
+    <div class="learn-more-button-container">
+      <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response" target="_blank" rel="noopener">Learn More</a>
+    </div>
   </div>
-  <div>
-    resources panel
+  <div class="content-panel">
+    <h1>Current Resources</h1>
+    <div *ngIf="!incident.wildfireCrewResourcesInd && !incident.wildfireAviationResourceInd && !incident.incidentMgmtCrewRsrcInd && !incident.heavyEquipmentResourcesInd && !incident.structureProtectionRsrcInd">
+      <div class="content-panel-body">
+        There are no currently deployed resources for this incident.
+      </div>
+    </div>
+    <!-- Wildfire Resources -->
+    <div *ngIf="incident.wildfireCrewResourcesInd" class="resource-panel">
+      <div class="resource-panel-icon">
+        <img class="image-size" src="../../../assets/images/svg-icons/wildfire-crews.svg" alt="Wildfire Crews" />
+      </div>
+      <div class="resource-panel-content">
+        <h3>Wildfire Crews</h3>
+        <div class="content-panel-body">
+          <div [innerHTML]="incident.wildfireCrewResourcesDetail"></div>
+        </div>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-crews" target="_blank" rel="noopener">Learn More</a>
+        </div>
+      </div>
+    </div>
+    <!-- Wildfire Aviation -->
+    <div *ngIf="incident.wildfireAviationResourceInd"  class="resource-panel">
+      <div class="resource-panel-icon">
+        <img class="image-size" src="../../../assets/images/svg-icons/aviation.svg" alt="Aviation" />
+      </div>
+      <div class="resource-panel-content">
+        <h3>Wildfire Aviation</h3>
+        <div class="content-panel-body">
+          <div [innerHTML]="incident.wildfireAviationResourceDetail"></div>
+        </div>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/wildfire-aviation" target="_blank" rel="noopener">Learn More</a>
+        </div>
+      </div>
+    </div>
+    <!-- Incident Management Teams -->
+    <div *ngIf="incident.incidentMgmtCrewRsrcInd"  class="resource-panel">
+      <div class="resource-panel-icon">
+        <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Incident Management Teams" />
+      </div>
+      <div class="resource-panel-content">
+        <h3>Incident Management Teams</h3>
+        <div class="content-panel-body">
+          <div [innerHTML]="incident.incidentMgmtCrewRsrcDetail"></div>
+        </div>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/incident-management" target="_blank" rel="noopener">Learn More</a>
+        </div>
+      </div>
+    </div>
+    <!-- Heavy Equipment -->
+    <div *ngIf="incident.heavyEquipmentResourcesInd"  class="resource-panel">
+      <div class="resource-panel-icon">
+        <img class="image-size" src="../../../assets/images/svg-icons/heavy_equipment.svg" alt="Heavy Equipment" />
+      </div>
+      <div class="resource-panel-content">
+        <h3>Heavy Equipment</h3>
+        <div class="content-panel-body">
+          <div [innerHTML]="incident.heavyEquipmentResourcesDetail"></div>
+        </div>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/heavy-equipment" target="_blank" rel="noopener">Learn More</a>
+        </div>
+      </div>
+    </div>
+    <!-- Structure Protection -->
+    <div *ngIf="incident.structureProtectionRsrcInd"  class="resource-panel">
+      <div class="resource-panel-icon">
+        <img class="image-size" src="../../../assets/images/svg-icons/structure-protection.svg" alt="Heavy Equipment" />
+      </div>
+      <div class="resource-panel-content">
+        <h3>Structure Protection</h3>
+        <div class="content-panel-body">
+          <div [innerHTML]="incident.structureProtectionRsrcDetail"></div>
+        </div>
+        <div class="learn-more-button-container">
+          <a class="learn-more-button" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/wildfire-personnel-and-response-tools/structure-protection" target="_blank" rel="noopener">Learn More</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
