--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -6,7 +6,7 @@
     <div>
       <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Information">
-          <incident-info-panel [incident]="incident" [evacOrders]="evacOrders"></incident-info-panel>
+          <incident-info-panel [incident]="incident" [evacOrders]="evacOrders" [areaRestrictions]="areaRestrictions"></incident-info-panel>
         </mat-tab>
         <mat-tab label="Overview">
           <incident-overview-panel [incident]="incident"></incident-overview-panel>
