--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -9,10 +9,11 @@
   padding: 22px;
 }
 .header-container> * {
-  flex: 1 1 28vw;
+  flex: 1 1 350px;
 }
 
 .map-container {
+  width: 100%;
   max-width: 533px;
   min-height: 400px !important;
 }
