--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -44,18 +44,47 @@
     font-weight: 700;
   }
   .content-panel {
+    padding-top: 10px;
+    border-bottom: 1px lightgray solid;
     h1 {
       font-size: 1.6rem;
       font-weight: 400;
       color: #003366;
+    }
+    h3 {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+    .content-panel-stack {
+      display: flex;
+      flex-direction: row;
+      flex-flow: row;
+      flex-wrap: wrap;
+    }
+    .content-panel-stack> * {
+      flex: 1 1 350px;
     }
     .content-panel-body {
       font-size: 1rem;
       font-weight: 400px;
       padding-bottom: 0.67rem;
     }
+    .content-panel-subtitle {
+      font-size: 1rem;
+      font-weight: 700;
+      padding-bottom: 0.67rem;
+      color: #003366;
+    }
+    .content-panel-link {
+      font-size: 1rem;
+      font-weight: 400px;
+      padding-bottom: 0.67rem;
+      color: #003366;
+      text-decoration: underline;
+    }
     .learn-more-button-container {
       margin-top: 10px;
+      margin-bottom: 25px;
     }
     .learn-more-button {
       padding: 8px;
@@ -91,7 +120,6 @@
           font-size: 1.2rem;
           font-weight: 700;
         }
-
       }
     }
   }
