Add options for agol queries to filter out centroid, geometry, extent

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-area-restrictions/panel-area-restrictions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-area-restrictions/panel-area-restrictions.component.html
@@ -28,6 +28,7 @@
       <div class="label" (mouseup)="zoomToArea(area)">{{area.name}}</div>
       <div *ngIf="area.bulletinUrl" style="margin-left: auto;"><a [href]="area.bulletinUrl"><mat-icon>link</mat-icon></a></div>
     </div>
+    <div *ngIf="areaRestrictions.length === 0" class="paragraph-format">There are no current Area Restrictions</div>
   </article>
 </section>
 <section>
