--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -26,6 +26,7 @@
       <div class="label" (mouseup)="zoomToEvac(evac)">{{evac.eventName}}</div>
       <div class="issued-by">(Issued By: {{evac.issuingAgency}})</div>
     </div>
+    <div *ngIf="evacOrders.length === 0" class="paragraph-format">There are no current Evacuation Orders or Alerts</div>
   </article>
 </section>
 <section>
