--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -1,3 +1,7 @@
+:host {
+  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+}
+
 .sticky-widget{
     position: fixed;
     bottom: 110px;
@@ -16,7 +20,7 @@
     align-items: center;
     border: none;
     cursor: pointer;
-    margin: 0 7.5px;    
+    margin: 0 7.5px;
 }
 
 .contact-btn{
@@ -34,4 +38,31 @@
 
 .btn mat-icon{
     margin-right: 15px;
+}
+
+.watchlist-container {
+  width: calc(100vw - 300px);
+  background: white;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  .watchlist-header {
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    .subtitle {
+      font-size: 1rem;
+      font-weight: 400;
+      padding-left: 10px;
+      margin-top: -3px;
+    }
+  }
+  .watchlist-items {
+    display: flex;
+    flex-direction: row;
+    .watchlist-item {
+      
+    }
+  }
 }
