some tweak about wfnews-469 filters

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.html
@@ -15,7 +15,7 @@
       <mat-icon (click)="edit()">edit</mat-icon> Edit Image Title
     </div>
     <div class="action">
-      <mat-checkbox [value]="includeInPublicGallery" (change)="includeInGallery()">Include in Public Gallery</mat-checkbox>
+      <mat-checkbox [value]="includeInPublicGallery" (change)="includeInGallery()"><span class="checkbox-label">Include in Public Gallery</span></mat-checkbox>
     </div>
   </div>
 </div>
