--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
@@ -35,6 +35,10 @@
       }
     }
 
+    .checkbox-label{
+      padding-left: 6px;
+    }
+
     .divider {
       border-bottom: 1px solid #cccccc;
     }
