--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -103,3 +103,16 @@
     border: 1px solid #969ca1;
   }
 }
+
+::ng-deep .mat-progress-bar-fill::after {
+  background-color: #1a5a9684;
+}
+
+::ng-deep .mat-progress-bar-buffer {
+  background: white;
+}
+
+::ng-deep .mat-progress-bar {
+  border-radius: 2px;
+  height: 2px !important;
+}
