--- a/client/wfnews-war/src/main/angular/src/app/components/panel-fire-danger/panel-fire-danger.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-fire-danger/panel-fire-danger.component.scss
@@ -55,21 +55,21 @@ section {
             &.blue {
               color: #5370C2;
               &::before {
-                background-color: #0000FF;
+                background-color: #0000FF99;
               }
             }
 
             &.green {
               color: #389341;
               &::before {
-                background-color: #00FF00;
+                background-color: #bcd57f;
               }
             }
 
             &.yellow {
               color: #7D7700;
               &::before {
-                background-color: #FFFF00;
+                background-color: #FFFF0099;
               }
             }
 
@@ -77,7 +77,7 @@ section {
                 color: #926831;
 
                 &::before {
-                    background-color: #FFAA00
+                    background-color: #FFAA0099
                 }
             }
 
