--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -3,7 +3,7 @@
     <div class="header-row">
         <p class="dashboard-title">Wildfires List
         </p>
-        <button mat-raised-button color="primary" class="stage-of-control" (click)="openStageOfControlLink()">What are Stage of Control?</button>
+        <button mat-raised-button color="primary" class="stage-of-control" (click)="openStageOfControlLink()">What are Stages of Control?</button>
     </div>
     <mat-tab-group>
         <mat-tab label="Wildfires"></mat-tab>
