--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="item-row">
                     <span class="item-title">Fire Centre: </span>
-                    <span class="item-content"></span>
+                    <span class="item-content">{{incident.fireCentre}}</span>
                 </div>
                 <div class="item-row">
                     <span class="item-title">Distance from My Location: </span>
@@ -94,14 +94,17 @@
 
         <div class="bottom-summary flex-y-fixed">
             <div class="showing-summary" style="flex: 75%;">{{summaryString}}</div>
-            <pagination-controls style = "text-align:center" [id]="config.id"
+            <!-- <pagination-controls style = "text-align:center" [id]="config.id"
                                  [maxSize]="5"
                                  [responsive]="false"
                                  [directionLinks]="true"
                                  [previousLabel]="simplePaginatorLabels.previousLabel"
                                  [nextLabel]="simplePaginatorLabels.nextLabel"
                                  [autoHide]="false"
-                                 (pageChange)="onPageChange($event)"></pagination-controls>
+                                 (pageChange)="onPageChange($event)"></pagination-controls> -->
+            <span class="paging-control" (click)="onPageChange(-1)"><mat-icon>chevron_left</mat-icon>Back</span>
+            <span class="paging-control" (click)="onPageChange(0)">Next<mat-icon>chevron_right</mat-icon></span>
+
         </div>
     </mat-tab>
 
