--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -45,7 +45,7 @@
                 <mat-option value="">
                   <span class="placeholder">Select...</span>
                 </mat-option>
-                <mat-option *ngFor = "let item of sizeTypeOptions" value="{{item.optionValue}}">
+                <mat-option *ngFor = "let item of sizeTypeOptions" value="{{item.id}}">
                   <span>{{item.optionValue}}</span>
                 </mat-option>
               </mat-select>
@@ -86,7 +86,7 @@
                 <mat-option value="">
                   <span class="placeholder">Select...</span>
                 </mat-option>
-                <mat-option *ngFor = "let item of causeOptions" value="{{item.optionValue}}">
+                <mat-option *ngFor = "let item of causeOptions" value="{{item.id}}">
                   <span>{{item.optionValue}}</span>
                 </mat-option>
               </mat-select>
