--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.html
@@ -1,12 +1,6 @@
 <div class="dialog-container">
   <h1 mat-dialog-title>Publish incident</h1>
-  <div class="dialog-content" mat-dialog-content>
-    <!-- <input #pdfInput hidden="true" type="file" onclick="this.value=null" (change)="pdfInputChange($event)" accept="image/*"/>
-    <button mat-flat-button color="primary" (click)="pdfInput.click()">Browse</button>
-    <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
-      <mat-label class="label">Title</mat-label>
-      <input matInput type="text" placeholder="Title" [(ngModel)]="title" [value]="title" required>
-    </mat-form-field> -->
+  <div class="dialog-content publish-dialog-content" mat-dialog-content>
     Are you sure you want to publish?
   </div>
   <div class="dialog-actions" mat-dialog-actions>
